--- a/signup.html
+++ b/signup.html
@@ -2,75 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup | Geek</title>
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-          <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-          <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signup | Geek</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <head>
-        <nav class="navbar navbar-expand-lg shadow-sm">
-            <div class="container">
-                <a class="navbar-brand fw-bold" href="#"><img class="mb-4" src="icon/logo-icon.svg"
-                        alt="logo image">Geek</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#">categories</a>
-                        <a class="nav-item nav-link" href="#">landings</a>
-                        <a class="nav-item nav-link" href="#">pages</a>
-                        <a class="nav-item nav-link" href="#">Accounts</a>
-                    </div>
-                </div>
-                <div class="right-meno-items d-flex align-items-center gap-2">
-                  <a href="#" class="text-secondary"><i class="uil uil-globe fs-4 text-secondary"></i></a>
-                  <a href="signin.html" type="button" class="btn btn-outline-dark">Login</a>
-                  <a href="signin.html" type="button" class="btn btn-dark">Join Now</a>
-                
-                </div>
-            </div>
-        </nav>
-        <section class="hero-section pt-5 pb-5">
-          <div class="container">
-            <div class="row">
-              <div class="col-6 pt-5">
-                <div class="text-primary mb-4">
-                  <span>🚀</span>
-                  <span>Empower Your Learning Journey Today</span>
-                </div>
-                <h1 class="display-2 fw-bolder">The #1 Courses Learning Platform</h1>
-                <p>Hands-on training, and certifications to help you get the most from Geeks Learning.</p>
-                <ul class="list-unstyled d-flex flex-column gap-2">
-                  <li>
-                    <img class="hero-bullet-icon mr-1" src="icon/check-circle.svg" alt="">
-                    <span>Expert Instructors</span>
-                  </li>
-                  <li>
-                    <img class="hero-bullet-icon mr-1" src="icon/check-circle.svg" alt="">
-                    <span>Expert Instructors</span>
-                  </li>
-                  <li>
-                    <img class="hero-bullet-icon mr-1" src="icon/check-circle.svg" alt="">
-                    <span>Expert Instructors</span>
-                  </li>
-                  
-                </ul>
-              </div>
-              <div class="col-6">
-                <img src="img/hero-img.png" alt="">
-              </div>
-            </div>
-          </div>
-        </section>
 </body>
 
 </html>
